<resources>
    <string name="app_name">Need a Ride?</string>
    <string name="hello">Hello</string>
    <string name="log_out">log out</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="join">Join Ride!</string>
    <string name="leave">Leave Ride</string>
    <string name="send">Send</string>
    <string name="edit">Edit details</string>
    <string name="origin">Origin point:</string>
    <string name="destination">Destination point: </string>
    <string name="departure">Departure time:</string>
    <string name="arrival">Arrival time:</string>
    <string name="seats">Passengers number:</string>
    <string name="driving">My drivings</string>
    <string name="rides">My rides</string>
    <string name="search">Search</string>
    <string name="add_ride">Add Ride</string>
    <string name="via">Via:</string>
    <string name="confirm">Confirm</string>
    <string name="ride_id">Ride ID:</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="phone_number">Phone number:</string>
    <string name="wait_message">Please wait...</string>
    <string name="save_changes">Save changes</string>
    <string name="profile_title">Profile</string>
    <string name="my_drivings">* My drivings</string>
    <string name="my_rides">* My rides</string>
    <string name="edit_profile">* Edit profile</string>
    <string name="edit_profile_title">Edit profile:</string>
    <string name="driving_title">My driving:</string>
    <string name="rides_title">My rides:</string>
    <string name="ride_number">Ride No.</string>
    <string name="driver">Driver:</string>
    <string name="passenger">Passenger:</string>
    <string name="wifi_alert">Please check your Wi-Fi is on!</string>
</resources>
