<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/title_text"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ride_id"
            android:id="@+id/chkId"
            android:textSize="@dimen/fragment_text"
            android:tag="@string/ride_id"/>

        <EditText
            android:id="@+id/txtRideID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:enabled="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure"
            android:textSize="@dimen/fragment_text"
            android:id="@+id/chkDeparture"
            android:tag="@string/departure"/>

        <TextView
            android:id="@+id/lblDeparture"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:enabled="false" /> <!-- date time fragment -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival"
            android:textSize="@dimen/fragment_text"
            android:id="@+id/chkArrival"
            android:tag="@string/arrival"/>

        <TextView
            android:id="@+id/lblArrival"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:enabled="false" /> <!-- date time fragment -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin"
            android:textSize="@dimen/fragment_text"
            android:id="@+id/chkOrigin"
            android:tag="@string/origin"/>

        <EditText
            android:id="@+id/txtOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:id="@+id/chkDestination"
            android:textSize="@dimen/fragment_text"
            android:tag="@string/destination"/>

        <EditText
            android:id="@+id/txtDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="@dimen/fragment_buttons_text"
        android:layout_marginTop="100sp"
        android:id="@+id/btnSearchRide"
        android:onClick="btnSearch"/>
</LinearLayout>